<?xml version="1.0" encoding="utf-8"?>
<!--Contains information for the list of users an administrator will access-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="ExtraText">

    <!-- Back Arrow -->
    <ImageView
        android:id="@+id/backArrowImageView"
        android:layout_width="wrap_content"
        android:layout_height="34dp"
        android:src="@drawable/ic_back_arrow"
        android:contentDescription="@string/back" />

    <!-- Title TextView -->
    <TextView
        android:id="@+id/toolbarTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/user_list"
        android:textSize="34sp" />

    <!-- RecyclerView for the list of attendees -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/userRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbarTitle"
        android:padding="10dp"/>


</RelativeLayout>