<?xml version="1.0" encoding="utf-8"?>
<!-- This file contains the information for the main User navigation bar menu.
 * Acknowledgements:
 * 1. NavBar Credit to agarwalkeshav8399, Last Updated April 5th: 2023,
 * <a href="https://creativecommons.org/licenses/by-sa/4.0/">...</a>
 * <a href="https://auth.geeksforgeeks.org/user/agarwalkeshav8399">...</a>
 * <a href="https://www.geeksforgeeks.org/bottom-navigation-bar-in-android/">...</a>-->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:title="Home"
        android:icon="@drawable/navbar_darkhome"/>
    <item
        android:id="@+id/events"
        android:title="My Events"
        android:icon="@drawable/navbar_events"/>
    <item
        android:id="@+id/qr"
        android:title="QR"
        android:icon="@drawable/navbar_qr"/>
    <item
        android:id="@+id/event_host"
        android:title="All Events"
        android:icon="@drawable/navbar_event_host"
        />
    <item
        android:id="@+id/profile"
        android:title="User Profile"
        android:icon="@drawable/navbar_profile_settings"
        />
</menu>